# neuro-interview

./: .env.example  .gitignore  README-EN.md  README.md  chunk_result.py  ffmpeg_scribe.py  main.py  nemo_requirements.txt  nemo_scribe.py  prompt-guide.txt  pyproject.toml  whisper_scribe.py  whisperx_diarize.py
core/: chunk_transcribed.py  ffmpeg_scribe.py  whisper_scribe.py  whisperx_diarize.py
core/utils/: config.py  ensure_dirs.py  logger.py  normalize_diar_segments.py  save_whisperx_result.py  split_audio.py
utils/: __init__.py  ensure_dirs.py  logger.py  normalize_diar_segments.py  split_audio.py
