[project]
name = "neuro-interview"
version = "0.1.0"
description = ""
authors = [
    {name = "hhhscvx",email = "hhhscvx@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "faster-whisper (>=1.2.0,<2.0.0)",
    "scikit-learn (==1.4.2)",
    "librosa (==0.10.2.post1)",
    "soundfile (==0.12.1)",
    "torch (==2.5.1)",
    "torchaudio (==2.5.1)",
    "numpy (>=2.0.2,<2.1)",
    "whisperx (>=3.4.3,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]

[tool.poetry.dependencies]
